@@ -1,58 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
-<head>
-  <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-  <title>Euskalbar: Eurovoc</title>
-  <script type="text/javascript">
-  function getParam(name) {
-    var regexS = "[\\?&]"+name+"=([^&#]*)";
-    var regex = new RegExp(regexS);
-    var tmpURL = window.location.href;
-    var results = regex.exec(tmpURL);
-    if(results == null)
-     return "";
-    else
-     return results[1];
-  }
-
-  function createForm() {
-    // Parametroak jaso aldagaietan
-    var hizk = getParam('hizkuntza');
-    var hitza = getParam('hitza');
-
-    // Inprimakia sortu eta atributuak esleitu
-    var form = document.createElement('form');
-    form.setAttribute("method", "post");
-    form.setAttribute("action", "http://www.bizkaia.net/kultura/eurovoc/busqueda.asp");
-
-    // hidden motako input bat sortu eta atributuak esleitu
-    var input = document.createElement('input');
-    input.setAttribute("type", "hidden");
-    input.setAttribute("name", "txtBuscar");
-    input.setAttribute("id", "txtBuscar");
-    input.setAttribute("value", "S");
-    
-    var input2 = document.createElement('input');
-    input2.setAttribute("type", "hidden");
-    input2.setAttribute("name", "query");
-    input2.setAttribute("id", "query");
-    input2.setAttribute("value", hitza);
-
-    var input3 = document.createElement('input');
-    input3.setAttribute("type", "hidden");
-    input3.setAttribute("name", "idioma");
-    input3.setAttribute("id", "idioma");
-    input3.setAttribute("value", hizk);
-
-    // Sortutako elementuak dokumentuari erantsi
-    form.appendChild(input);
-    form.appendChild(input2);
-    form.appendChild(input3);
-    document.body.appendChild(form);
-  }
-  </script>
-</head>
-
-<body onload="createForm(),document.forms[0].submit()">
-</body>
-</html>
